crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_in_list.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"status:200,301,404\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "status" IN (?, ?, ?)
---
params:
  0: 200
  1: 301
  2: 404
