crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_kitchen_sink.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(r#\"service=nginx _severity=error last=2h \"connection refused\" -debug\"#)"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE TRY_CAST("_time" AS TIMESTAMP) >= now()::TIMESTAMP - INTERVAL '2 hours' AND "service" = ? AND "_severity" = ? AND (COALESCE((CASE WHEN typeof("message") = 'VARCHAR' THEN CAST("message" AS VARCHAR) WHEN typeof("message") = 'JSON' AND json_type(CAST("message" AS JSON)) = 'VARCHAR' THEN json_extract_string(CAST("message" AS JSON), '$') ELSE NULL END) ILIKE ?, FALSE) OR COALESCE((CASE WHEN typeof("_raw") = 'VARCHAR' THEN CAST("_raw" AS VARCHAR) WHEN typeof("_raw") = 'JSON' AND json_type(CAST("_raw" AS JSON)) = 'VARCHAR' THEN json_extract_string(CAST("_raw" AS JSON), '$') ELSE NULL END) ILIKE ?, FALSE)) AND (NOT COALESCE((CASE WHEN typeof("message") = 'VARCHAR' THEN CAST("message" AS VARCHAR) WHEN typeof("message") = 'JSON' AND json_type(CAST("message" AS JSON)) = 'VARCHAR' THEN json_extract_string(CAST("message" AS JSON), '$') ELSE NULL END) ILIKE ?, FALSE) AND NOT COALESCE((CASE WHEN typeof("_raw") = 'VARCHAR' THEN CAST("_raw" AS VARCHAR) WHEN typeof("_raw") = 'JSON' AND json_type(CAST("_raw" AS JSON)) = 'VARCHAR' THEN json_extract_string(CAST("_raw" AS JSON), '$') ELSE NULL END) ILIKE ?, FALSE))
---
params:
  0: 'nginx'
  1: 'error'
  2: '%connection refused%'
  3: '%connection refused%'
  4: '%debug%'
  5: '%debug%'
