crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_level_case_insensitive_token.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"level=WARN\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "severity" BETWEEN 13 AND 16
