crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_level_is_a_plain_field_filter.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"level=gold\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "level" = ?
---
params:
  0: 'gold'
