crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_level_ne_band.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"level!=info\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE ("severity" NOT BETWEEN 9 AND 12 OR "severity" IS NULL)
