crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_multiple_filters.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"service:nginx level:error\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "service" = ? AND "level" = ?
---
params:
  0: 'nginx'
  1: 'error'
