crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__search_negated_text.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl(\"-debug\")"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE (COALESCE("message" NOT ILIKE ?, TRUE) AND COALESCE("_raw" NOT ILIKE ?, TRUE))
---
params:
  0: '%debug%'
  1: '%debug%'
